# consolekit

./: .gitignore  CMakeLists.txt  README.md  example.txt
examples/: basic.cpp
include/consolekit/: Color.hpp  Composer.hpp  Console.hpp  ConsoleBuffer.hpp
src/: Composer.cpp  Console.cpp  ConsoleBuffer.cpp
